# sterriar-sample-claude-json-structured-output

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: patterns.md
src/: __init__.py  basic.py  nested.py  partial.py  retry.py  streaming.py
tests/: conftest.py  test_basic.py  test_nested.py  test_partial.py  test_retry.py  test_streaming.py
